test/valid/TestSpreadFieldsDeclarations/TestSpreadFieldsDeclarations.plume
/**
 * With fields declaration spread over class body still the implicit constructor takes that into account. 
 * @see SpreadFieldsDeclarations.plume 
 * @author fc41625@alunos.fc.ul.pt F‡bio Botelho 
 * @version $id$ 
 *
 */

class TestSpreadFieldsDeclarations extends Object is

	method main : () -> String is
		new SpreadFieldsDeclarations(1, 2).sum().toString() 
	//expected output:  3 
		 